--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pokémon IFPR</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Fredoka+One&display=swap" rel="stylesheet">
 </head>
 
 <body class="tema-claro" style="font-family:'Poppins',sans-serif;">
@@ -13,7 +13,7 @@
   <!-- BOTÃO DE TEMA -->
   <button id="toggleTema" class="botao-tema">🌙</button>
 
-  <!-- BARRA SUPERIOR (Pokébola / Ultra Ball) -->
+  <!-- BARRA SUPERIOR -->
   <header>
     <div class="pokebola-topo" id="pokebolaTopo">
       <div class="pokebola-superior"></div>
@@ -32,7 +32,6 @@
     </nav>
   </header>
 
-
   <!-- CONTEÚDO -->
   <main>
     <h1>Pokémon IFPR</h1>
@@ -47,13 +46,10 @@
     <p>&copy; 2025 Pokémon IFPR - Todos os direitos reservados.</p>
   </footer>
 
-
-
   <style>
-
-    /* ======================================================
+    /* =========================================
        BOTÃO DE TEMA
-    ====================================================== */
+    ========================================= */
     .botao-tema {
       position: fixed;
       top: 20px;
@@ -75,11 +71,9 @@
       border-color: yellow;
     }
 
-
-
-    /* ======================================================
-       POKÉBOLA / ULTRA BALL DO TOPO
-    ====================================================== */
+    /* =========================================
+       POKÉBOLA / ULTRA BALL
+    ========================================= */
     .pokebola-topo {
       width: 100%;
       height: 150px;
@@ -87,31 +81,20 @@
       overflow: hidden;
     }
 
-    /* TEMA CLARO – POKÉBOLA */
     .tema-claro .pokebola-superior { background: #d00000; }
     .tema-claro .pokebola-faixa { background: black; }
     .tema-claro .pokebola-inferior { background: white; }
-    .tema-claro .pokebola-botao {
-      background: white;
-      border: 8px solid black;
-    }
+    .tema-claro .pokebola-botao { background: white; border: 8px solid black; }
 
-    /* TEMA ESCURO – ULTRA BALL */
     .tema-escuro .pokebola-superior { background: #0a0a0a; }
     .tema-escuro .pokebola-faixa { background: #ffcc00; }
     .tema-escuro .pokebola-inferior { background: #0053a0; }
-    .tema-escuro .pokebola-botao {
-      background: #1e1e1e;
-      border: 8px solid #ffcc00;
-    }
+    .tema-escuro .pokebola-botao { background: #1e1e1e; border: 8px solid #ffcc00; }
 
-    .pokebola-superior,
-    .pokebola-faixa,
-    .pokebola-inferior {
+    .pokebola-superior, .pokebola-faixa, .pokebola-inferior {
       position: absolute;
       width: 100%;
     }
-
     .pokebola-superior { height: 75px; top: 0; }
     .pokebola-faixa { height: 25px; top: 62px; z-index: 3; }
     .pokebola-inferior { height: 75px; bottom: 0; }
@@ -133,10 +116,185 @@
       50% { transform: translateX(-50%) scale(1.12); }
     }
 
-
-
-    /* ======================================================
+    /* =========================================
        CORES DO TEMA
-    ====================================================== */
+    ========================================= */
     .tema-claro {
-      backgrou
+      background: #f0f0f0;
+      color: #111;
+    }
+
+    .tema-escuro {
+      background: linear-gradient(to bottom, #000814, #001d3d);
+      color: white;
+    }
+
+    /* NAVIGATION STYLE */
+    nav {
+      text-align: center;
+      padding: 15px 0;
+      position: sticky;
+      top: 0;
+    }
+
+    nav a {
+      margin: 0 15px;
+      text-decoration: none;
+      font-family: 'Fredoka One', cursive;
+      font-size: 18px;
+      padding: 10px 18px;
+      border-radius: 12px;
+      transition: 0.3s;
+      display: inline-block;
+    }
+
+    .tema-claro nav { background: rgba(255,255,255,0.8); }
+    .tema-claro nav a {
+      background: #ff0000;
+      color: white;
+    }
+    .tema-claro nav a:hover {
+      background: #d40000;
+      transform: scale(1.08);
+    }
+
+    .tema-escuro nav { background: rgba(0,0,0,0.7); }
+    .tema-escuro nav a {
+      background: #0053a0;
+      color: #ffcc00;
+    }
+    .tema-escuro nav a:hover {
+      background: #003f7f;
+      transform: scale(1.08);
+    }
+
+    /* GRID DE POKÉMON */
+    #conteudo {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 30px;
+      padding: 40px;
+      justify-items: center;
+    }
+    @media(max-width:900px) { #conteudo { grid-template-columns: repeat(2,1fr); } }
+    @media(max-width:600px) { #conteudo { grid-template-columns: 1fr; } }
+
+    .bloco-item {
+      width: 280px;
+      padding: 20px;
+      border-radius: 16px;
+      text-align: center;
+      animation: aparecer 0.8s ease forwards;
+      opacity: 0;
+      transition: 0.3s;
+      backdrop-filter: blur(8px);
+    }
+
+    .tema-claro .bloco-item { background: rgba(255,255,255,0.35); box-shadow: 0 0 12px rgba(0,0,0,0.25); }
+    .tema-escuro .bloco-item { background: rgba(0,0,0,0.45); box-shadow: 0 0 12px rgba(0,150,255,0.4); }
+
+    .bloco-item:hover { transform: scale(1.06); }
+
+    .bloco-item img {
+      width: 220px;
+      height: 220px;
+      object-fit: contain;
+      margin-bottom: 10px;
+    }
+
+    .tipo-container { display:flex; justify-content:center; gap:6px; flex-wrap:wrap; margin-top:10px; }
+    .tipo { padding:4px 8px; border-radius:6px; font-weight:600; font-size:14px; color:white; }
+
+    @keyframes aparecer { from { transform: translateY(30px); opacity:0; } to { transform: translateY(0); opacity:1; } }
+
+  </style>
+
+  <script>
+    /* TROCA E SALVAMENTO DE TEMA */
+    const botaoTema = document.getElementById("toggleTema");
+    const body = document.body;
+
+    function aplicarTema(tema) {
+      body.classList.remove("tema-claro", "tema-escuro");
+      body.classList.add(tema);
+      botaoTema.textContent = tema === "tema-claro" ? "🌙" : "☀️";
+      localStorage.setItem("tema", tema);
+    }
+
+    botaoTema.onclick = () => {
+      const novoTema = body.classList.contains("tema-claro") ? "tema-escuro" : "tema-claro";
+      aplicarTema(novoTema);
+    };
+
+    aplicarTema(localStorage.getItem("tema") || "tema-claro");
+
+
+    /* CARREGAR POKÉMONS */
+    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzohiPhWabHPixQ-NvMlpNzbXy_QDvlYUDysw6qn4e5bMMalOVMhNOarOmOQWaVQecr/exec";
+
+    const tiposPokemon = {
+      fogo:{cor:"#EE8130",icone:"🔥"}, agua:{cor:"#6390F0",icone:"💧"}, planta:{cor:"#7AC74C",icone:"🌿"},
+      eletrico:{cor:"#F7D02C",icone:"⚡"}, psiquico:{cor:"#F95587",icone:"🔮"}, gelo:{cor:"#96D9D6",icone:"❄️"},
+      dragao:{cor:"#6F35FC",icone:"🐉"}, noturno:{cor:"#705746",icone:"🌑"}, fada:{cor:"#D685AD",icone:"✨"},
+      lutador:{cor:"#C22E28",icone:"🥊"}, venenoso:{cor:"#A33EA1",icone:"☠️"}, terrestre:{cor:"#E2BF65",icone:"🌍"},
+      pedra:{cor:"#B6A136",icone:"🪨"}, fantasma:{cor:"#735797",icone:"👻"}, inseto:{cor:"#A6B91A",icone:"🐛"},
+      aco:{cor:"#B7B7CE",icone:"⚙️"}, normal:{cor:"#A8A77A",icone:"⚪"}, voador:{cor:"#A98FF3",icone:"🌬️"}
+    };
+
+    async function carregarConteudo() {
+      const container = document.getElementById('conteudo');
+      container.innerHTML = "<p>Carregando conteúdo...</p>";
+
+      try {
+        const res = await fetch(SCRIPT_URL);
+        const dados = await res.json();
+        container.innerHTML = "";
+
+        dados.forEach(item => {
+          const bloco = document.createElement('div');
+          bloco.className = 'bloco-item';
+          let corBorda = "#fff";
+          if(item.Tipo){
+            const tp = item.Tipo.split(/[\/,]/)[0].trim().toLowerCase();
+            corBorda = tiposPokemon[tp]?.cor || "#fff";
+          }
+          bloco.style.border = `4px solid ${corBorda}`;
+
+          if(item.Url){
+            const img = document.createElement('img');
+            img.src = item.Url;
+            bloco.appendChild(img);
+          }
+
+          const nome = document.createElement('div');
+          nome.className = 'pokemon-nome';
+          nome.textContent = item.Título;
+          bloco.appendChild(nome);
+
+          if(item.Tipo){
+            const tiposDiv = document.createElement("div");
+            tiposDiv.className = "tipo-container";
+            item.Tipo.split(/[\/,]/).map(t=>t.trim().toLowerCase()).forEach(tipo=>{
+              const info = tiposPokemon[tipo] || {cor:"#999", icone:"❓"};
+              const el = document.createElement("div");
+              el.className = "tipo";
+              el.style.backgroundColor = info.cor;
+              el.innerHTML = `${info.icone} ${tipo}`;
+              tiposDiv.appendChild(el);
+            });
+            bloco.appendChild(tiposDiv);
+          }
+
+          container.appendChild(bloco);
+        });
+
+      } catch(err){
+        container.innerHTML = "<p>Erro ao carregar.</p>";
+      }
+    }
+
+    carregarConteudo();
+  </script>
+
+</body>
+</html>
